# squidgen

./: .gitignore  PROGRESS.md  README.md  REPORT.md  pyproject.toml
docs/: eval-history.md
docs/plans/: 2026-05-09-imgvec-faoize-design.md  2026-05-09-squidgen-design.md
imgvec/: __init__.py  cli.py  fao.py  harness.py  judge.py  profiles.py
